<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/edit_profile_ava"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:scaleType="fitXY"
                android:src="@raw/cover" />

            <RelativeLayout
                android:id="@+id/content_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/edit_profile_ava"
                android:padding="@dimen/fab_margin">

                <TextView
                    android:id="@+id/name"
                    style="@style/name_row_edit_profile"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edit_profile_name"
                    style="@style/edit_text_profile"
                    android:layout_below="@+id/name" />

                <View
                    style="@style/line_edit_profile"
                    android:layout_below="@+id/edit_profile_name" />

                <TextView
                    android:id="@+id/about_me"
                    style="@style/name_row_edit_profile"
                    android:layout_below="@+id/edit_profile_name"
                    android:layout_marginTop="30dp"
                    android:text="@string/about_me" />

                <EditText
                    android:id="@+id/edit_profile_about_me"
                    style="@style/edit_text_profile"
                    android:layout_below="@+id/about_me"
                    android:inputType="textMultiLine|textCapSentences|text"/>

                <View
                    style="@style/line_edit_profile"
                    android:layout_below="@+id/edit_profile_about_me" />

                <RelativeLayout
                    android:id="@+id/edit_profile_row_gender"
                    style="@style/row_edit_profile"
                    android:layout_below="@+id/edit_profile_about_me"
                    android:paddingTop="20dp"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/gender"
                        style="@style/name_row_edit_profile"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/edit_profile_gender"
                        style="@style/content_row_edit_profile" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/edit_profile_row_date_birth"
                    style="@style/row_edit_profile"
                    android:layout_below="@+id/edit_profile_row_gender"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/birth_date"
                        style="@style/name_row_edit_profile"
                        android:text="@string/date_birt" />

                    <TextView
                        android:id="@+id/edit_profile_birth_date"
                        style="@style/content_row_edit_profile"/>
                </RelativeLayout>


                <TextView
                    android:id="@+id/place"
                    style="@style/name_row_edit_profile"
                    android:layout_below="@+id/edit_profile_row_date_birth"
                    android:layout_marginTop="20dp"
                    android:text="@string/place" />

                <EditText
                    android:id="@+id/edit_profile_place"
                    style="@style/edit_text_profile"
                    android:layout_below="@+id/place"
                    android:inputType="textMultiLine|textCapSentences|text"/>

                <View
                    style="@style/line_edit_profile"
                    android:layout_below="@+id/edit_profile_place" />

                <TextView
                    android:id="@+id/email"
                    style="@style/name_row_edit_profile"
                    android:layout_below="@+id/edit_profile_place"
                    android:layout_marginTop="30dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/edit_profile_email"
                    style="@style/edit_text_profile"
                    android:layout_below="@+id/email"
                    android:inputType="textMultiLine|textCapSentences|textEmailAddress"/>

                <View
                    style="@style/line_edit_profile"
                    android:layout_below="@+id/edit_profile_email" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/name_row_edit_profile"
                    android:layout_below="@+id/edit_profile_email"
                    android:layout_marginTop="30dp"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/edit_profile_phone"
                    style="@style/edit_text_profile"
                    android:layout_below="@+id/phone"
                    android:inputType="textMultiLine|textCapSentences|number"/>

                <View
                    style="@style/line_edit_profile"
                    android:layout_below="@+id/edit_profile_phone" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_no_radius"
                android:text="@string/update"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/size_text_button" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>